# ddmm

./: CLAUDE_CODE_PROMPT.md  LICENSE  LLM_GUIDE.md  README.md  pyproject.toml
drakedrakemayemaye/: __init__.py  cli.py  compat.py  importer.py  repl.py  transpiler.py
examples/: data_processing.ddmm  ddmm_demo.ipynb  fibonacci.ddmm  flask_app.ddmm  hello_world.ddmm  pytorch_mlp.ddmm  web_request.ddmm
tests/: test_cli.py  test_edge_cases.py  test_importer.py  test_ipython_extension.py  test_transpiler.py
tests/fixtures/: classes.ddmm  edge_cases.ddmm  stdlib_usage.ddmm
tests/fixtures/imports/: main.ddmm  utils.ddmm
